<resources>
    <string name="app_name">FlashBox</string>
    <string name="layer_button">Button</string>
    <string name="layer_dpad">D-Pad</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Warning</string>
    <string name="confirm_del_layer">Confirm to delete this view?</string>
    <string name="select_add_layer">Select to add:</string>
    <string name="view_width">Width</string>
    <string name="view_height">Height</string>
    <string name="view_x">X</string>
    <string name="view_y">Y</string>
    <string name="view_text">Text</string>
    <string name="keep_press">Keep Press</string>
    <string name="edit_view">Edit View</string>
    <string name="key_code">Key Code</string>
    <string name="ellipsis">…</string>
    <string name="map_up_limit">Map up to three keys.</string>
    <string name="error">Error</string>
    <string name="enable_keyboard">Enable Keyboard</string>
    <string name="enable_controller">Enable Controller</string>
    <string name="select_keyboard">Select Keyboard</string>
    <string name="select_controller">Select Controller</string>
    <string name="unavailable">Unavailable</string>
    <string name="select_key">Select Key</string>
    <string name="note">Note</string>
    <string name="keyboard_available">An available keyboard has been ready.</string>
    <string name="keyboard_unavailable">The keyboard has been removed.</string>
    <string name="controller_available">An available controller has been ready.</string>
    <string name="controller_unavailable">The controller has been removed.</string>
    <string name="config_controller">Config Controller</string>
    <string name="name">Name</string>
    <string name="trigger_value">Trigger Value</string>
    <string name="config_map">Config Map</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="direction">Direction</string>
    <string name="button_name">Button Name</string>
    <string name="layer_joystick">JoyStick</string>
    <string name="view_size">Size</string>
    <string name="arrow_up">&#8593;</string>
    <string name="arrow_down">&#8595;</string>
    <string name="arrow_left">&#8592;</string>
    <string name="arrow_right">&#8594;</string>
    <string name="no_name">New</string>
</resources>