<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="@dimen/dimen_config_line_len"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <!-- 控件宽度项 -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="start"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/view_width" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_width"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:singleLine="true" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/seekbar_width"
                    android:layout_width="@dimen/dimen_config_len"
                    android:layout_height="wrap_content" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <!-- 控件高度项 -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="start"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/view_height" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_height"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:singleLine="true" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/seekbar_height"
                    android:layout_width="@dimen/dimen_config_len"
                    android:layout_height="wrap_content" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <!-- 键值项 -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/key_code" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.aof.flashbox.input.view.ToastTextView
                        android:id="@+id/text_key"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_select"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:gravity="end"
                    android:text="@string/ellipsis" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <!-- 保持按住开关项 -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/keep_press" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_keep"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:gravity="end" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <!-- 控件文本项 -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/view_text" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_text"
                    android:layout_width="@dimen/dimen_config_len"
                    android:layout_height="wrap_content"
                    android:gravity="end" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <!-- 控件X坐标项 -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/view_x" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_x"
                    android:layout_width="@dimen/dimen_config_len"
                    android:layout_height="wrap_content"
                    android:gravity="end" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <!-- 控件Y坐标项 -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/view_y" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_y"
                    android:layout_width="@dimen/dimen_config_len"
                    android:layout_height="wrap_content"
                    android:gravity="end" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>
